--- a/index.html
+++ b/index.html
@@ -76,7 +76,23 @@
                     <img src="./B10A1-Challenge-Begins/assets/html.png" alt="">
                     <h2>HTML</h2>
                     <p class="all-p">Lorem Ipsum is simply dummy text of <br> the printing.</p>
+                    <a class="ankhor" href="">learn more</a>
+                    </div>
+                    <div class="child-2">
+                        <img src="./B10A1-Challenge-Begins/assets/css.png" alt="">
+                        <h2>CSS</h2>
+                        <p class="all-p">Lorem Ipsum is simply dummy text of <br> the printing.</p>
+                        <a class="ankhor" href="learn more">learn more</a>
+                    </div>
+                    <div class="child-3">
+                        <img src="./B10A1-Challenge-Begins/assets/js.png" alt="">
+                        <h2>JavaScript</h2>
+                        <p class="all-p">Lorem Ipsum is simply dummy text of <br> the printing.</p>
+                        <a class="ankhor" href="learn more">learn more</a>
+                    </div>
                 </div>
+            </div>
+               
             </div>
            </section>
     </main>
